# attendance-report-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  SELF_ASSESSMENT_NOTES.md  USAGE.md  logger_config.py  main.py  pyproject.toml  requirements.txt  self_assessment_v2.html  test_time_handler.py
core/: models.py  variation_logic.py
parsing/: pdf_reader.py
processors/: base_strategy.py  eagle_strategy.py  monthly_strategy.py  transformation_strategy.py  type_a_strategy.py  type_b_strategy.py  validating_decorator.py
services/: ocr_service.py  pdf_generator.py  transformation_service.py
src/attendance_report/: __init__.py  __main__.py  cli.py  container.py
src/attendance_report/application/: __init__.py  interfaces.py  observers.py  pipeline.py  service.py
src/attendance_report/application/parsing/: __init__.py  base_parser.py  eagle_parser.py  factory.py  monthly_parser.py
src/attendance_report/application/transformation/: __init__.py  base.py  (+5 more)
src/attendance_report/domain/: __init__.py  exceptions.py  models.py  rules.py  time_utils.py
src/attendance_report/infrastructure/: __init__.py  logging_config.py  ocr_service.py  pdf_generator.py
templates/: eagle_template.html  monthly_template.html
tests/: conftest.py
tests/integration/: test_pipeline.py  test_real_pipeline.py
tests/unit/: test_cli.py  test_logging_config.py  test_models.py  test_parsers.py  test_rules.py  test_seed.py  test_service_observers.py  test_strategy_factory.py  test_time_utils.py  test_transformation.py  test_validating_decorator.py
utils/: __init__.py  time_handler.py
