[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-report-generator"
version = "2.0.0"
description = "Read scanned PDF attendance reports, apply deterministic variations, and render new PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yael" }]
keywords = ["ocr", "pdf", "attendance", "clean-architecture", "design-patterns"]
dependencies = [
    "pdf2image",
    "pytesseract",
    "pillow",
    "pdfkit",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "mypy",
]

[project.scripts]
attendance-report = "attendance_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end pipeline tests using fakes",
]

[tool.coverage.run]
source = ["attendance_report"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["attendance_report"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
